--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "firebase serve",
+    "start": "webpack-dev-server --hot --colors --port 3000",
     "preinstall": "npm run install-functions",
     "install-functions": "cd functions && npm install",
     "component": "elm-generate component",
     "route": "elm-generate route",
-    "start:prod": "NODE_ENV=production firebase serve",
+    "serve": "firebase serve",
+    "serve:prod": "NODE_ENV=production firebase serve",
     "deploy": "npm run build && firebase deploy",
     "build": "mkdir -p functions/build && cd functions && npm run build",
     "test": "elm-test"
@@ -17,12 +18,14 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "elm-on-spades": "git+https://github.com/rogeriochaves/spades.git",
+    "elm": "^0.19.1-2",
     "elm-test": "^0.19.1",
-    "elm-webpack-loader": "^6.0.0",
+    "elm-webpack-loader": "^6.0.1",
+    "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.17.0",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-middleware": "^3.1.3"
+    "webpack-dev-middleware": "^3.1.3",
+    "webpack-dev-server": "^3.9.0"
   },
   "dependencies": {
     "ejs": "^2.6.1",
